--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,9 @@
   <li>
     <div class="user-view">
       <div class="background">
-        <img src="static/img/side-nav.jpeg" />
+        <img src="static/imgs/side-nav.jpeg" />
       </div>
-      <a href="#user"><img class="circle" src="static/img/sample_blank_profile.png" /></a>
+      <a href="#!"><img class="circle" src="static/imgs/sample_blank_profile.png" /></a>
     </div>
   </li>
   <li>
@@ -33,7 +33,7 @@
   <li><a href="#!"><i class="material-icons">folder_special</i>Your Bets</a></li>
   <li><div class="divider"></div></li>
   <li><a class="waves-effect"><i class="material-icons">person</i>Profile</a></li>
-  <li><a class=" subheader waves-effect" href="#!"><i class="material-icons">forward</i>Sign Out</a></li>
+  <li><a class="waves-effect" href="#!"><i class="material-icons">forward</i>Sign Out</a></li>
 </ul>
 
 {% endblock %} {% block scripts %} {{ super() }}
