--- a/templates/index.html
+++ b/templates/index.html
@@ -1,40 +1,70 @@
 {% extends "material/base.html" %} {% block content %}
+
 <main>
   <header>
     <nav>
       <div class="nav-wrapper black">
-        <a
-          href="#"
-          data-target="slide-out"
-          class="sidenav-trigger show-on-medium-and-up"
-          ><i class="material-icons">menu</i></a
-        >
         <a href="#" class="brand-logo center">betBCA</a>
       </div>
     </nav>
   </header>
 
   <div class="container">
+    <div class="center-align" style="margin-top: 50px; background-color: black; padding: 20px;">
+      <h1 class="animated-text red-text" style="font-family: 'Roboto', sans-serif; font-size: 3rem; margin: 0;">
+        The <span class="animated-text" style="color: #e53935; font-weight: bold;">#1 & Only</span> Sports Betting App in <span class="animated-text" style="color: #e53935; font-weight: bold;">BCA!</span>
+      </h1>
+      <div class="animated-icons">
+        <i class="material-icons animated-icon">casino</i>
+        <i class="material-icons animated-icon">sports_esports</i>
+        <i class="material-icons animated-icon">emoji_events</i>
+      </div>
+    </div>
+    <div class="card grey black">
+      <div class="card-content">
+        <span class="card-title center-align">Sign In</span>
+        <form method="POST" action="/signin">
+          <div class="input-field">
+            <input
+              class="white-text"
+              id="username"
+              name="username"
+              type="text"
+              class="validate"
+              required
+            />
+            <label for="username">Username</label>
+          </div>
+          <div class="input-field">
+            <input
+              class="white-text"
+              id="password"
+              name="password"
+              type="password"
+              class="validate"
+              required
+            />
+            <label for="password">Password</label>
+          </div>
+          <div class="center-align">
+            <button type="submit" class="btn waves-effect waves-light">
+              Sign In
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="news-banner-container red">
+    <div class="news-banner center-align white-text">
+      <div class="news-item">Breaking News: betBCA Launches!</div>
+      <div class="news-item">Biggest Jackpot Won!</div>
+      <div class="news-item">Special Bonus: 50% Cashback!</div>
+      <div class="news-item">Exciting Events This Weekend!</div>
+    </div>
   </div>
 </main>
 
-<ul id="slide-out" class="sidenav">
-  <li>
-    <div class="user-view">
-      <div class="background">
-        <img src="static/imgs/side-nav.jpeg" />
-      </div>
-      <a href="#!"><img class="circle" src="static/imgs/sample_blank_profile.png" /></a>
-    </div>
-  </li>
-  <li>
-    <a href="#!"><i class="material-icons">attach_money</i>Search Bets</a>
-  </li>
-  <li><a href="#!"><i class="material-icons">folder_special</i>Your Bets</a></li>
-  <li><div class="divider"></div></li>
-  <li><a class="waves-effect"><i class="material-icons">person</i>Profile</a></li>
-  <li><a class="waves-effect" href="#!"><i class="material-icons">forward</i>Sign Out</a></li>
-</ul>
 
 {% endblock %} {% block scripts %} {{ super() }}
 
