--- a/templates/index.html
+++ b/templates/index.html
@@ -3,26 +3,26 @@
 <main>
   <header>
     <nav>
-      <div class="nav-wrapper black">
-        <a href="#" class="brand-logo center">betBCA</a>
+      <div class="nav-wrapper black logo-container">
+        <img src = "/static/imgs/betBCA_logo.png" width = 500px height = 280px >
       </div>
     </nav>
   </header>
 
   <div class="container">
-    <div class="center-align" style="margin-top: 50px; background-color: black; padding: 20px;">
-      <h1 class="animated-text red-text" style="font-family: 'Roboto', sans-serif; font-size: 3rem; margin: 0;">
-        The <span class="animated-text" style="color: #e53935; font-weight: bold;">#1 & Only</span> Sports Betting App in <span class="animated-text" style="color: #e53935; font-weight: bold;">BCA!</span>
-      </h1>
-      <div class="animated-icons">
-        <i class="material-icons animated-icon">casino</i>
-        <i class="material-icons animated-icon">sports_esports</i>
-        <i class="material-icons animated-icon">emoji_events</i>
-      </div>
-    </div>
     <div class="card grey black">
       <div class="card-content">
-        <span class="card-title center-align">Sign In</span>
+        <div class="center-align" style="margin-top: 50px; background-color: black; padding: 20px;">
+          <h1 class="animated-text">
+            The <span class="animated-text" style="color: #ffcc00; font-weight: bold;">#1 & Only</span> Sports Betting App in <span class="animated-text" style="color: #ffcc00; font-weight: bold;">BCA!</span>
+          </h1>
+          <div class="animated-icons">
+            <i class="material-icons animated-icon">casino</i>
+            <i class="material-icons animated-icon">sports_esports</i>
+            <i class="material-icons animated-icon">emoji_events</i>
+          </div>
+        </div>
+        <span class="card-title center-align" style="color: white; font-weight: bold; font-size: 18px;">Sign In To Continue Your Journey!</span>
         <form method="POST" action="/signin">
           <div class="input-field">
             <input
@@ -55,12 +55,12 @@
       </div>
     </div>
   </div>
-  <div class="news-banner-container red">
-    <div class="news-banner center-align white-text">
-      <div class="news-item">Breaking News: betBCA Launches!</div>
-      <div class="news-item">Biggest Jackpot Won!</div>
-      <div class="news-item">Special Bonus: 50% Cashback!</div>
-      <div class="news-item">Exciting Events This Weekend!</div>
+  <div class="news-banner-container">
+    <div class="news-banner">
+      <div class="news-item">🔔 Breaking News: betBCA Launches!</div>
+      <div class="news-item">🎉 Biggest Jackpot Won!</div>
+      <div class="news-item">💰 Special Bonus: 50% Cashback!</div>
+      <div class="news-item">🎈 Exciting Events This Weekend!</div>
     </div>
   </div>
 </main>
