--- a/templates/your_bets.html
+++ b/templates/your_bets.html
@@ -1,5 +1,8 @@
 {% extends "material/base.html" %} {% block content %}
-
+{% block styles %}
+    {{ super() }}
+    <link rel="stylesheet" href="/static/css/styles2.css">
+{% endblock %}
 <main>
   <header>
     <nav>
