--- a/templates/all_bets.html
+++ b/templates/all_bets.html
@@ -15,12 +15,17 @@
           ><i class="material-icons">menu</i></a
         >
         <a href="#" class="brand-logo center">betBCA</a>
+        <ul class="right hide-on-med-and-down">
+            <li>
+                <span class="points">{{ user_points }} 💵</span>
+            </li>
+        </ul>
       </div>
     </nav>
     </header>
     <div class="container">
         <div class="row">
-            <!-- Start of Bets Display -->
+
             {% for index in range(bet_ids|length) %}
             <div class="col s12 m6 l6">
                 <div class="card blue-grey darken-4">
@@ -34,15 +39,44 @@
                         </p>
                     </div>
                     <div class="card-action">
-                        <a href="#">Submit Bet!</a>
+                        <a href="#" class="submit-bet" data-bet-id="{{ bet_ids[index] }}" data-bet-topic="{{ bet_topics[index] }}" data-choice1="{{ choices_1[index] }}" data-choice2="{{ choices_2[index] }}">Submit Bet!</a>
                     </div>
                 </div>
             </div>
             {% endfor %}
-            <!-- End of Bets Display -->
+
         </div>
     </div>
 </main>
+
+<div id="bet-modal" class="modal bet-modal">
+    <form id="bet-form" method="POST" action="/submit_bet">
+        <div class="modal-content bet-modal-content">
+            <h4 class="bet-modal-header">Bet #<span id="bet-id"></span>: <span id="bet-topic"></span></h4>
+            <div class="team-selection">
+                <p>Select The Team You Wish To Bet On!</p>
+                <label>
+                    <input type="radio" name="team" value="choice1" id="choice1" />
+                    <span id="choice1-label"></span>
+                </label>
+                <label>
+                    <input type="radio" name="team" value="choice2" id="choice2" />
+                    <span id="choice2-label"></span>
+                </label>
+            </div>
+            <label for="bet-amount">Amount To Bet:</label>
+            <input type="range" id="bet-amount" name="amount" min="5" max="100" value="5" class="bet-range" />
+            <p class="bet-amount-display">$<span id="bet-amount-value">5</span></p>
+            <input type="hidden" id="bet-id-hidden" name="bet_id" />
+            <input type="hidden" id="bet-topic-hidden" name="bet_topic" />
+            <input type="hidden" id="choice1-hidden" name="choice1" />
+            <input type="hidden" id="choice2-hidden" name="choice2" />
+        </div>
+        <div class="modal-footer bet-modal-footer">
+            <button type="submit" class="modal-close waves-effect waves-light btn">Submit</button>
+        </div>
+    </form>
+</div>
 
 <ul id="slide-out" class="sidenav">
     <li>
@@ -63,6 +97,9 @@
       <a href="{{ url_for('your_bets') }}"><i class="material-icons">folder_special</i>Your Bets</a>
     </li>
     <li><div class="divider"></div></li>
+    <li>
+        <a class="waves-effect"><i class="material-icons">list</i> Leaderboard</a>
+    </li>
     <li>
       <a class="waves-effect"><i class="material-icons">person</i>{{username}}'s Profile</a>
     </li>
