--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
       <div class="card-content">
         <div class="center-align" style="margin-top: 50px; background-color: black; padding: 20px;">
           <h1 class="animated-text">
-            The <span class="animated-text" style="color: #ffcc00; font-weight: bold;">#1 & Only</span> Sports Betting App in <span class="animated-text" style="color: #ffcc00; font-weight: bold;">BCA!</span>
+            The <span class="animated-text" style="color: #ffcc00; font-weight: bold;">#1 & Only</span> Betting App in <span class="animated-text" style="color: #ffcc00; font-weight: bold;">BCA!</span>
           </h1>
           <div class="animated-icons">
             <i class="material-icons animated-icon">casino</i>
