--- a/templates/all_bets.html
+++ b/templates/all_bets.html
@@ -17,7 +17,7 @@
         <a href="#" class="brand-logo center">betBCA</a>
         <ul class="right hide-on-med-and-down">
             <li>
-                <span class="points">{{ user_points }} 💵</span>
+                <span class="points">{{ username }} 👤 ${{ user_points }} 💵</span>
             </li>
         </ul>
       </div>
@@ -25,7 +25,6 @@
     </header>
     <div class="container">
         <div class="row">
-
             {% for index in range(bet_ids|length) %}
             <div class="col s12 m6 l6">
                 <div class="card blue-grey darken-4">
@@ -47,6 +46,14 @@
 
         </div>
     </div>
+    <div class="news-banner-container">
+      <div class="news-banner">
+        <div class="news-item">🔔 Breaking News: betBCA Launches!</div>
+        <div class="news-item">🎉 Biggest Jackpot Won!</div>
+        <div class="news-item">💰 Special Bonus: 50% Cashback!</div>
+        <div class="news-item">🎈 Exciting Events This Weekend!</div>
+      </div>
+    </div>
 </main>
 
 <div id="bet-modal" class="modal bet-modal">
@@ -65,7 +72,7 @@
                 </label>
             </div>
             <label for="bet-amount">Amount To Bet:</label>
-            <input type="range" id="bet-amount" name="amount" min="5" max="100" value="5" class="bet-range" />
+            <input type="range" id="bet-amount" name="amount" min="5" max="{{user_points}}" value="5" class="bet-range" />
             <p class="bet-amount-display">$<span id="bet-amount-value">5</span></p>
             <input type="hidden" id="bet-id-hidden" name="bet_id" />
             <input type="hidden" id="bet-topic-hidden" name="bet_topic" />
@@ -98,10 +105,10 @@
     </li>
     <li><div class="divider"></div></li>
     <li>
-        <a class="waves-effect"><i class="material-icons">list</i> Leaderboard</a>
+        <a href = "{{url_for('leaderboard')}}" class="waves-effect"><i class="material-icons">list</i> Leaderboard</a>
     </li>
     <li>
-      <a class="waves-effect"><i class="material-icons">person</i>{{username}}'s Profile</a>
+      <a href = "{{url_for('profile')}}" class="waves-effect"><i class="material-icons">person</i>{{username}}'s Profile</a>
     </li>
     <li>
       <a class="waves-effect" href="{{ url_for('logout') }}"
