fixed abs value

--- a/templates/all_bets.html
+++ b/templates/all_bets.html
@@ -17,7 +17,7 @@
         <a href="#" class="brand-logo center">betBCA</a>
         <ul class="right hide-on-med-and-down">
             <li>
-                <span class="points">{{ username }} 👤 ${{ user_points }} 💵</span>
+                <span class="points">{{ username }} 👤 &nbsp;&nbsp; {{ level }} &nbsp;&nbsp; ${{ user_points }} 💵</span>
             </li>
         </ul>
       </div>
