--- a/templates/forgot_pw.html
+++ b/templates/forgot_pw.html
@@ -15,23 +15,14 @@
   <div class="container">
     <div class="card grey black">
       <div class="card-content">
-        <div class="center-align" style="margin-top: 50px; background-color: black; padding: 20px;">
-          <h1 class="animated-text">
-            The <span class="animated-text" style="color: #ffcc00; font-weight: bold;">#1 & Only</span> Betting App in <span class="animated-text" style="color: #ffcc00; font-weight: bold;">BCA!</span>
-          </h1>
-          <div class="animated-icons">
-            <i class="material-icons animated-icon">casino</i>
-            <i class="material-icons animated-icon">sports_esports</i>
-            <i class="material-icons animated-icon">emoji_events</i>
-          </div>
-        </div>
-        <span class="card-title center-align" style="color: white; font-weight: bold; font-size: 18px;">Sign In To Continue Your Journey!</span>
-        <form method="POST" action="/signin">
+        </br>
+        <span class="card-title center-align" style="color: white; font-weight: bold; font-size: 18px;">Input The Following Info! </span>
+        <form method="POST" action="/submit_pw_change">
           <div class="input-field">
             <input
               class="white-text"
-              id="username"
-              name="username"
+              id="username3"
+              name="username3"
               type="text"
               class="validate"
               required
@@ -41,30 +32,29 @@
           <div class="input-field">
             <input
               class="white-text"
-              id="password"
-              name="password"
-              type="password"
+              id="sec_question2"
+              name="sec_question2"
+              type="text"
               class="validate"
               required
             />
-            <label for="password">Password</label>
+            <label for="sec_question"> Security Question: What city were you born in? </label>
+          </div>
+          <div class="input-field">
+            <input
+              class="white-text"
+              id="new_pw"
+              name="new_pw"
+              type="text"
+              class="validate"
+              required
+            />
+            <label for="new_pw"> New Password </label>
           </div>
           <div class="center-align">
-            <a href = "{{url_for('forgot_pw')}}">Forgot password?</a>
-            </br>
-            </br>
             <button type="submit" class="btn waves-effect waves-light">
-              Sign In
+              Submit
             </button>
-          </div>
-          </br>
-          <div class="center-align" style="margin-top: 20px;">
-            <span style="color: white;">Don't have an account?</span>
-            </br>
-          </br>
-            <a href="{{url_for("sign_up")}}" class="btn waves-effect waves-light yellow black-text">
-              Sign Up
-            </a>
           </div>
         </form>
       </div>
